--- a/pom.xml
+++ b/pom.xml
@@ -185,6 +185,12 @@
                             </excludes>
                         </filter>
                         <filter>
+                            <artifact>*:*</artifact>
+                            <excludes>
+                                <exclude>META-INF/*.MF</exclude>
+                            </excludes>
+                        </filter>
+                        <filter>
                             <artifact>org.apache.tika:tika-parsers</artifact>
                             <includes>
                                 <include>org/apache/tika/parser/txt/*</include>
@@ -198,6 +204,9 @@
                             </includes>
                         </filter>
                     </filters>
+                    <transformers>
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer" />
+                    </transformers>
                 </configuration>
                 <executions>
                     <execution>
