Fix an old test that kept adding files to the repo

--- a/src/test/resources/configurations/config-epicknarvik.yml
+++ b/src/test/resources/configurations/config-epicknarvik.yml
@@ -72,5 +72,5 @@ debugging:
   permissionDebug: false
   debug: false
 folders:
-  portalFolder: src/test/resources/oldsaves/epicknarvik/
+  portalFolder: portals
   gateFolder: plugins/Stargate/gates/
