--- a/src/main/resources/migration/file-migrations-6.properties
+++ b/src/main/resources/migration/file-migrations-6.properties
@@ -1,4 +1,4 @@
-plugins/Stargate/data/=plugins/Stargate/debug/legacy/data
-plugins/Stargate/gates/matid/=plugins/Stargate/debug/legacy/gates_matid
-plugins/Stargate/fallback/=plugins/Stargate/debug/legacy/fallback
-plugins/Stargate/config/=plugins/Stargate/debug/legacy/config
+data/=debug/legacy/data
+gates/matid/=debug/legacy/gates_matid
+fallback/=debug/legacy/fallback
+config/=debug/legacy/config
