--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,12 @@
             <version>2.0.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.Thorinwasher</groupId>
+            <artifactId>BlockUtil</artifactId>
+            <version>v1.0.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <build>
         <finalName>Stargate-${project.version}</finalName>
