--- a/pom.xml
+++ b/pom.xml
@@ -63,15 +63,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>5.9.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>com.github.seeseemelk</groupId>
-            <artifactId>MockBukkit-v1.20</artifactId>
-            <version>3.78.0</version>
+            <artifactId>MockBukkit-v1.18</artifactId>
+            <version>2.85.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -79,12 +73,6 @@
             <artifactId>annotations</artifactId>
             <version>24.0.1</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>us.dynmap</groupId>
@@ -121,6 +109,12 @@
             <artifactId>api</artifactId>
             <version>2.2.0-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.9.2</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
