--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -106,6 +106,11 @@ gates:
     # This is more resource intensive, and should really only be used if verifyPortals is true.
     # Or if using an easily destroyable open/closed material.
     protectEntrance: false
+    
+    # Should things like outdated signs, invalid button materials and not properly closed Stargates be fixed at startup?
+    # It is generally recommended to enable this, but for huge servers, the amount of chunks loaded might require way
+    # too much RAM.
+    applyStartupFixes: true
   
   # +----------------------------------------------------------------------------------------------+ #
   # |                                       Aesthetic Tweaks                                       | #
