More typo purging.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: Stargate
 main: org.sgrewritten.stargate.Stargate
 version: @version@
 description: The original, and still the best, transportation plugin for the Bukkit Ecosystem.
-authors: [ Knarvik, Thorin, sgrewitten.org/credits ]
+authors: [ Knarvik, Thorin, sgrewritten.org/credits ]
 website: https://sgrewritten.org
 api-version: 1.20
 folia-supported: true
