--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.sgrewritten</groupId>
     <artifactId>stargate</artifactId>
-    <version>1.0.0.19-NIGHTLY</version>
+    <version>1.0.0.19</version>
     <name>Stargate</name>
     <description>The original, and still the best, transportation plugin for the Bukkit Ecosystem.</description>
     <url>https://sgrewritten.org</url>
@@ -182,7 +182,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>Stargate-${project.version}-${git.commit.id.abbrev}</finalName>
+        <finalName>Stargate-${project.version}-${git.branch.caps}-${git.commit.id.abbrev}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -320,7 +320,21 @@
                     <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
                     <includeOnlyProperties>
                         <includeOnlyProperty>^git.commit.id.abbrev</includeOnlyProperty>
+                        <includeOnlyProperty>^git.branch</includeOnlyProperty>
                     </includeOnlyProperties>
+                    <replacementProperties>
+                        <replacementProperty>
+                            <property>git.branch</property>
+                            <propertyOutputSuffix>caps</propertyOutputSuffix>
+                            <forceValueEvaluation>false</forceValueEvaluation>
+                            <transformationRules>
+                                <transformationRule>
+                                    <apply>AFTER</apply>
+                                    <action>UPPER_CASE</action>
+                                </transformationRule>
+                            </transformationRules> 
+                        </replacementProperty>
+                    </replacementProperties>
                     <commitIdGenerationMode>full</commitIdGenerationMode>
                 </configuration>
             </plugin>
